<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:background="@color/orange"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="288dp"
                android:layout_marginTop="47dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/my_image_view"
                    android:layout_width="282dp"
                    android:layout_height="206dp"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/task_manager_logo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/task_manager_logo" />

                <TextView
                    android:id="@+id/welcomeMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/activity_content_border_radius"
                    android:hint="@string/enter_username"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="#EF6C00"
                    android:textSize="24sp" />

                <Button

                    android:id="@+id/captureUsernameButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/next"
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="10dp"
        android:background="@color/orange"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>