<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".DashBoard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="270dp"
               android:layout_marginStart="4dp"
               android:layout_marginEnd="4dp"
               android:paddingBottom="5dp"
               android:background="@drawable/activity_content_border_radius"
               android:orientation="vertical"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:gravity="center">

               <ImageView
                   android:layout_width="match_parent"
                   android:layout_height="144dp"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="2dp"
                   android:background="@drawable/activity_heading_border_radius"
                   android:src="@drawable/taskmanagementhero" />

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@drawable/activity_content_border_radius"
                   android:gravity="center"
                   android:orientation="vertical"
                   android:paddingStart="3dp"
                   android:paddingEnd="3dp">

                   <TextView
                       android:id="@+id/welcome"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:fontFamily="cursive"
                       android:orientation="vertical"
                       android:text="Welcome"
                       android:textColor="@color/black"
                       android:textSize="24sp" />

                   <TextView
                       android:id="@+id/username_display"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_margin="5dp"
                       android:orientation="vertical"
                       android:textColor="@color/black"
                       android:textSize="20dp"
                       android:textStyle="bold" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingTop="5dp"
                   android:paddingBottom="0dp"
                   android:gravity="bottom"
                   android:orientation="vertical">

                   <GridLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:columnCount="3"
                       android:padding="2dp"
                       android:rowCount="1"
                       tools:ignore="UselessParent">

                       <Button
                           android:id="@+id/ongoing"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_columnWeight="1"
                           android:layout_gravity="fill_horizontal"
                           android:backgroundTint="@color/bachelor_blue"
                           android:text="@string/ongoing"
                           android:textColor="@color/black"
                           android:textSize="16sp"
                           tools:ignore="VisualLintButtonSize" />

                       <Button
                           android:id="@+id/overdue"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_columnWeight="1"
                           android:layout_gravity="fill_horizontal"
                           android:backgroundTint="@color/orange"
                           android:text="OverDue"
                           android:textColor="@color/black"
                           android:textSize="16sp"
                           tools:ignore="HardcodedText,VisualLintButtonSize" />

                       <Button
                           android:id="@+id/completed"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_columnWeight="1"
                           android:layout_gravity="fill_horizontal"
                           android:backgroundTint="@color/orange"
                           android:text="@string/complete"
                           android:textColor="@color/black"
                           android:textSize="16sp"
                           tools:ignore="VisualLintButtonSize" />
                   </GridLayout>
               </LinearLayout>
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="500dp"
               android:layout_marginStart="4dp"
               android:layout_marginEnd="4dp"
               android:layout_marginTop="5dp"
               android:background="@drawable/activity_content_border_radius"
               android:orientation="vertical"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent">
               <GridLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="5dp"
                   android:background="@drawable/activity_content_border_radius"
                   android:columnCount="2"
                   android:padding="5dp"
                   android:rowCount="3">

                   <!-- First column: Task Name -->
                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_columnWeight="2"
                       android:text="@string/task_name"
                       android:textColor="@color/black"
                       android:textSize="18sp"
                       android:textStyle="bold" />

                   <!-- Second column: Spanning TextView -->

                   <!-- Second column: Spanning LinearLayout with alarm bell icon and three dots -->
                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_rowSpan="3"
                       android:layout_rowWeight="1"
                       android:layout_columnWeight="1"
                       android:layout_marginEnd="0dp"
                       android:gravity="center|end"
                       android:orientation="horizontal">

                       <!-- Alarm bell icon -->
                       <ImageView
                           android:layout_width="20dp"
                           android:layout_height="25dp"
                           android:layout_marginEnd="8dp"
                           android:contentDescription="@string/todo"
                           android:src="@drawable/alarm_bell"
                           tools:ignore="ImageContrastCheck" />

                       <!-- Three vertically aligned dots -->
                       <Button
                           android:id="@+id/options_button"
                           android:layout_width="68dp"
                           android:layout_height="wrap_content"
                           android:background="?attr/selectableItemBackground"
                           android:text="@string/actions"
                           android:textColor="@color/black"
                           android:textSize="20sp"
                           android:textStyle="bold" />

                   </LinearLayout>


                   <!-- Priority Category -->
                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_columnWeight="2"
                       android:text="@string/priority_category"
                       android:textColor="@color/black"
                       android:textSize="15sp" />

                   <!-- Finished On -->
                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_columnWeight="2"
                       android:text="@string/finished_on"
                       android:textColor="@color/black"
                       android:textSize="15sp" />
               </GridLayout>
           </LinearLayout>
       </LinearLayout>
    </ScrollView>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/add_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:fabSize="normal"
        app:backgroundTint="@color/orange" />
</androidx.constraintlayout.widget.ConstraintLayout>